src/main/java/com/example/springboot3jwtauthentication/error/ErrorResponse.java
package com.example.springboot3jwtauthentication.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class ErrorResponse {
    private String errorCode;
    private String errorMessage;
}
